--- a/src/app/components/tableview/tableview.component.html
+++ b/src/app/components/tableview/tableview.component.html
@@ -124,7 +124,7 @@
                 <!-- Age Column -->
                 <ng-container matColumnDef="age">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Age</th>
-                    <td mat-cell *matCellDef="let mouse"> 34 </td>
+                    <td mat-cell *matCellDef="let mouse"> {{ mouse.age }} </td>
                 </ng-container>
 
                 <!-- Gender Column -->
