--- a/src/app/components/tableview/tableview.component.html
+++ b/src/app/components/tableview/tableview.component.html
@@ -173,7 +173,7 @@
                                     mouse.pfa.small_intenstine_tumor ||
                                     mouse.pfa.skin ||
                                     mouse.pfa.skin_hair ||
-                                    (mouse.pfa.other !== '')">
+                                    (mouse.pfa.other != '')">
                             <i style="color: lightgreen" class="fa fa-check" aria-hidden="true"></i>
                         </span>
                         <span *ngIf="!(mouse.pfa.liver ||
@@ -182,7 +182,7 @@
                                        mouse.pfa.small_intenstine_tumor ||
                                        mouse.pfa.skin ||
                                        mouse.pfa.skin_hair ||
-                                      (mouse.pfa.other !== ''))">
+                                      (mouse.pfa.other != ''))">
                             <i style="color: red" class="fa fa-times" aria-hidden="true"></i>
                         </span>
                     </td>
