--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,9 @@
     <div class="row">
         <div class="col-6">
             <insertmouseview #insertmouseviewref
-            [hidden]="!insertmousechecked_flag" (closepanel)="closepanel()"></insertmouseview>
+            [hidden]="!insertmousechecked_flag" 
+            (closepanel)="closepanel()"
+            (insertSuccessEvent)="insertSuccessEventHandler()"></insertmouseview>
         </div>
     </div>
 </div>
