--- a/src/app/components/tableview/tableview.component.html
+++ b/src/app/components/tableview/tableview.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z15 round-corner">
-    <input style="display:none;" type="file" #csvfileInput (change)="onFileChange($event)">
+    <input style="display:none;" type="file" #csvfileInput (change)="onFileChange($event)" accept=".csv" multiple>
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4 text-center">
